--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 
 <h1>Hello Internet!</h1>
 <p>This is a paragraph.</p>
+<p></p>
+<p>This is another paragraph.</p>
 <script>alert('Random Javascript!');</script>
 </body>
 </html>
