--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <h1>Hello Internet!</h1>
 <p>This is a paragraph.</p>
 <p>This is another paragraph.</p>
+<p>Final test paragraph.</p>
 <script>alert('Random Javascript!');</script>
 </body>
 </html>
