under construction message

--- a/index.html
+++ b/index.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Justin's Website</title>
+<title>Justin B. Christensen</title>
 </head>
 <body>
 
-<h1>Hello Internet!</h1>
-<p>This is a paragraph.</p>
-<p>This is another paragraph.</p>
-<p>Final test paragraph.</p>
-<script>alert('Random Javascript!');</script>
+<h1>Welcome!</h1>
+<p>This site is under construction. Stay tuned for exciting updates!</p>
+<script>alert('Hello There!');</script>
 </body>
 </html>
