testing live refresh on mobile

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
 <h1>Welcome!</h1>
 <p>This site is under construction. Stay tuned for exciting updates!</p>
+<p>Testing... Testing... 1... 2... 3...</p>
 <script>alert('Hello There!');</script>
 </body>
 </html>
