--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Home | Justin B. Christensen</title>
+<title>About Me | Justin B. Christensen</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="shortcut icon" type="image/jpg" href="images/favicon.jpg"/>
@@ -17,11 +17,8 @@
 </div>
 
 <div class="content">
-  <h2>Justin B. Christensen</h2>
-  <img src="images/jbc_headshot_grayscale.jpg" alt="Portrait of Justin" height="300" width="300">
-  <p>I am a Masters student at the MIT Media Lab.</p>
-  <p>I explore holography and other 3D display technologies.</p>
-  <p>I am a maker, dreamer, and (lowercase "i") imagineer.</p>
+  <h2>About Me</h2>
+  <p>Coming soon...</p>
 </div>
 
 <div class="footer">
