--- a/connect.html
+++ b/connect.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Home | Justin B. Christensen</title>
+<title>Contact | Justin B. Christensen</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="shortcut icon" type="image/jpg" href="images/favicon.jpg"/>
@@ -17,11 +17,13 @@
 </div>
 
 <div class="content">
-  <h2>Justin B. Christensen</h2>
-  <img src="images/jbc_headshot_grayscale.jpg" alt="Portrait of Justin" height="300" width="300">
-  <p>I am a Masters student at the MIT Media Lab.</p>
-  <p>I explore holography and other 3D display technologies.</p>
-  <p>I am a maker, dreamer, and (lowercase "i") imagineer.</p>
+  <h2>Connect</h2>
+  <p>If you would like to get in touch, please email me <a href="mailto:justinbc@mit.edu">here</a>.</p>
+  <p>If you are interested, <a href="assets/JBC_resume.pdf">here</a> is a copy of my resume.</p>
+  <p>Email: <a href="mailto:justinbc@mit.edu">justinbc@mit.edu</a></p>
+  <p>LinkedIn: <a href="https://www.linkedin.com/in/justin-b-christensen/">justin-b-christensen</a></p>
+  <p>Facebook: <a href="https://www.facebook.com/justin.b.christensen.9">justin.b.christensen.9</a></p>
+  <p>Twitter: <a href="https://www.twitter.com/jbc_genki">jbc_genki</a></p>
 </div>
 
 <div class="footer">
