--- a/connect.html
+++ b/connect.html
@@ -19,7 +19,7 @@
 <div class="content">
   <h2>Connect</h2>
   <p>If you would like to get in touch, please email me <a href="mailto:justinbc@mit.edu">here</a>.</p>
-  <p>If you are interested, <a href="assets/JBC_resume.pdf">here</a> is a copy of my resume.</p>
+  <p>If you are interested, <a href="assets/JBC_Resume.pdf">here</a> is a copy of my resume.</p>
   <p>Email: <a href="mailto:justinbc@mit.edu">justinbc@mit.edu</a></p>
   <p>LinkedIn: <a href="https://www.linkedin.com/in/justin-b-christensen/">justin-b-christensen</a></p>
   <p>Facebook: <a href="https://www.facebook.com/justin.b.christensen.9">justin.b.christensen.9</a></p>
