Added periods in footer. Changed nav buttons to be colored when hovering. Changed portrait on Home page to be colorized when hovering. Changed links on Connect page to social media icon squares.

--- a/about.html
+++ b/about.html
@@ -10,10 +10,10 @@
 <body>
 
 <div class="topnav">
-  <a href="connect.html">Connect</a>
-  <a href="projects.html">Projects</a>
-  <a href="about.html">About Me</a>
-  <a href="index.html">Home</a>
+  <a id="button_blue" href="connect.html">Connect</a>
+  <a id="button_green" href="projects.html">Projects</a>
+  <a id="button_yellow" href="about.html">About Me</a>
+  <a id="button_red" href="index.html">Home</a>
 </div>
 
 <div class="content">
@@ -22,7 +22,7 @@
 </div>
 
 <div class="footer">
-  <p>&copy <script>document.write( new Date().getFullYear() );</script> Justin Browning Christensen All Rights Reserved</p>
+  <p>&copy <script>document.write( new Date().getFullYear() );</script> Justin Browning Christensen. All Rights Reserved.</p>
 </div>
 
 </body>
