--- a/connect.html
+++ b/connect.html
@@ -6,28 +6,38 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="shortcut icon" type="image/jpg" href="images/favicon.jpg"/>
 <link rel="stylesheet" type="text/css" href="stylesheet.css">
+<!-- Add icon library -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
 
 <div class="topnav">
-  <a href="connect.html">Connect</a>
-  <a href="projects.html">Projects</a>
-  <a href="about.html">About Me</a>
-  <a href="index.html">Home</a>
+  <a id="button_blue" href="connect.html">Connect</a>
+  <a id="button_green" href="projects.html">Projects</a>
+  <a id="button_yellow" href="about.html">About Me</a>
+  <a id="button_red" href="index.html">Home</a>
 </div>
 
 <div class="content">
   <h2>Connect</h2>
   <p>If you would like to get in touch, please email me <a href="mailto:justinbc@mit.edu">here</a>.</p>
   <p>If you are interested, <a href="assets/JBC_Resume.pdf">here</a> is a copy of my resume.</p>
+  <!-- Add font awesome icons -->
+  <a href="mailto:justinbc@mit.edu" class="fa fa-envelope-square"></a>
+  <a href="https://www.linkedin.com/in/justin-b-christensen/" class="fa fa-linkedin"></a>
+  <a href="https://www.facebook.com/justin.b.christensen.9" class="fa fa-facebook"></a>
+  <a href="https://www.twitter.com/jbc_genki" class="fa fa-twitter"></a>
+  <br></br>
+<!--
   <p>Email: <a href="mailto:justinbc@mit.edu">justinbc@mit.edu</a></p>
   <p>LinkedIn: <a href="https://www.linkedin.com/in/justin-b-christensen/">justin-b-christensen</a></p>
   <p>Facebook: <a href="https://www.facebook.com/justin.b.christensen.9">justin.b.christensen.9</a></p>
   <p>Twitter: <a href="https://www.twitter.com/jbc_genki">jbc_genki</a></p>
+-->
 </div>
 
 <div class="footer">
-  <p>&copy <script>document.write( new Date().getFullYear() );</script> Justin Browning Christensen All Rights Reserved</p>
+  <p>&copy <script>document.write( new Date().getFullYear() );</script> Justin Browning Christensen. All Rights Reserved.</p>
 </div>
 
 </body>
