--- a/index.html
+++ b/index.html
@@ -10,22 +10,22 @@
 <body>
 
 <div class="topnav">
-  <a href="connect.html">Connect</a>
-  <a href="projects.html">Projects</a>
-  <a href="about.html">About Me</a>
-  <a href="index.html">Home</a>
+  <a id="button_blue" href="connect.html">Connect</a>
+  <a id="button_green" href="projects.html">Projects</a>
+  <a id="button_yellow" href="about.html">About Me</a>
+  <a id="button_red" href="index.html">Home</a>
 </div>
 
 <div class="content">
   <h2>Justin B. Christensen</h2>
-  <img src="images/jbc_headshot_grayscale.jpg" alt="Portrait of Justin" height="300" width="300">
+  <img src="images/jbc_headshot_grayscale.jpg" alt="Portrait of Justin" id="portrait">
   <p>I am a Masters student at the MIT Media Lab.</p>
   <p>I explore holography and other 3D display technologies.</p>
   <p>I am a maker, dreamer, and (lowercase "i") imagineer.</p>
 </div>
 
 <div class="footer">
-  <p>&copy <script>document.write( new Date().getFullYear() );</script> Justin Browning Christensen All Rights Reserved</p>
+  <p>&copy <script>document.write( new Date().getFullYear() );</script> Justin Browning Christensen. All Rights Reserved.</p>
 </div>
 
 </body>
