Changed font to Lucida Console. Changed Favicon to my own design.

--- a/connect.html
+++ b/connect.html
@@ -4,7 +4,7 @@
 <title>Contact | Justin B. Christensen</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="shortcut icon" type="image/jpg" href="images/favicon.jpg"/>
+<link rel="shortcut icon" type="image/jpg" href="images/favicon_j.png"/>
 <link rel="stylesheet" type="text/css" href="stylesheet.css">
 <!-- Add icon library -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -19,21 +19,14 @@
 </div>
 
 <div class="content">
-  <h2>Connect</h2>
+  <h1>Connect</h1>
   <p>If you would like to get in touch, please email me <a href="mailto:justinbc@mit.edu">here</a>.</p>
   <p>If you are interested, <a href="assets/JBC_Resume.pdf">here</a> is a copy of my resume.</p>
-  <!-- Add font awesome icons -->
   <a href="mailto:justinbc@mit.edu" class="fa fa-envelope-square"></a>
   <a href="https://www.linkedin.com/in/justin-b-christensen/" class="fa fa-linkedin"></a>
   <a href="https://www.facebook.com/justin.b.christensen.9" class="fa fa-facebook"></a>
   <a href="https://www.twitter.com/jbc_genki" class="fa fa-twitter"></a>
   <br></br>
-<!--
-  <p>Email: <a href="mailto:justinbc@mit.edu">justinbc@mit.edu</a></p>
-  <p>LinkedIn: <a href="https://www.linkedin.com/in/justin-b-christensen/">justin-b-christensen</a></p>
-  <p>Facebook: <a href="https://www.facebook.com/justin.b.christensen.9">justin.b.christensen.9</a></p>
-  <p>Twitter: <a href="https://www.twitter.com/jbc_genki">jbc_genki</a></p>
--->
 </div>
 
 <div class="footer">
