--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>Home | Justin B. Christensen</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="shortcut icon" type="image/jpg" href="images/favicon.jpg"/>
+<link rel="shortcut icon" type="image/jpg" href="images/favicon_j.png"/>
 <link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
 <body>
@@ -17,11 +17,12 @@
 </div>
 
 <div class="content">
-  <h2>Justin B. Christensen</h2>
+  <h1>Hello there!</h1>
+  <h2>My name is Justin B. Christensen.</h2>
   <img src="images/jbc_headshot_grayscale.jpg" alt="Portrait of Justin" id="portrait">
   <p>I am a Masters student at the MIT Media Lab.</p>
   <p>I explore holography and other 3D display technologies.</p>
-  <p>I am a maker, dreamer, and (lowercase "i") imagineer.</p>
+  <p>I am a fabricator, perfectionist, and (lowercase "i") imagineer.</p>
 </div>
 
 <div class="footer">
