--- a/projects.html
+++ b/projects.html
@@ -4,7 +4,7 @@
 <title>Projects | Justin B. Christensen</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="shortcut icon" type="image/jpg" href="images/favicon.jpg"/>
+<link rel="shortcut icon" type="image/jpg" href="images/favicon_j.png"/>
 <link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
 <body>
@@ -17,7 +17,7 @@
 </div>
 
 <div class="content">
-  <h2>Projects</h2>
+  <h1>Projects</h1>
   <p>Coming soon...</p>
 </div>
 
