Deleted old favicon since it was not my image. Fixed portrait so hover transition would be smoother. Because the fix involved creating a class, that functionality is now available for all images, not just the portrait.

--- a/about.html
+++ b/about.html
@@ -18,11 +18,34 @@
 
 <div class="content">
   <h1>About Me</h1>
-  <p>Coming soon...</p>
+  <p>
+    I was born and raised in Ogden, Utah. After high school and serving a
+    full-time two-year mission for my church (The Church of Jesus Christ of
+    Latter-day Saints) in the Tokyo, Japan area, I started studying electrical
+    engineering at Brigham Young University (BYU) in Provo, Utah. There, I
+    discovered my passion for holography and other forms of 3D display
+    technology. This led me to pursue doing research at the MIT Media Lab, where
+    many breakthroughs have been made in that field.
+  </p>
+  <p>
+    I now live in Cambridge, Massachusetts as a full-time student/research
+    assistant with my sweet wife, Kayla, and our two-year-old daughter, Lia.
+    When I am not studying or doing research, I love to spend as much time with
+    my family as possible. We love to watch movies, play games, and go on walks
+    together. I am an avid sports fan (#TakeNote), nerd culture enthusiast (Star
+    Wars and MCU expert), and video game lover (grew up with PlayStation, and am
+    now also a Nintendo follower). I also love to be outdoors taking a hike,
+    going camping or hunting, or just looking at the beautiful world that
+    surrounds us.
+  </p>
+  <p>
+    
+  </p>
 </div>
 
 <div class="footer">
-  <p>&copy <script>document.write( new Date().getFullYear() );</script> Justin Browning Christensen. All Rights Reserved.</p>
+  <p>&copy <script>document.write( new Date().getFullYear() );</script> Justin
+    Browning Christensen. All Rights Reserved.</p>
 </div>
 
 </body>
