--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
 <div class="content">
   <h1>Hello there!</h1>
   <h2>My name is Justin B. Christensen.</h2>
-  <img src="images/jbc_headshot_grayscale.jpg" alt="Portrait of Justin" id="portrait">
+  <div class="picture">
+    <img src="images/jbc_headshot_grayscale.jpg" alt="Portrait of Justin" width="300" height="300">
+    <img src="images/jbc_headshot_color.jpg" class="img-top" alt="Portrait of Justin" width="300" height="300">
+  </div>
   <p>I am a Masters student at the MIT Media Lab.</p>
   <p>I explore holography and other 3D display technologies.</p>
   <p>I am a fabricator, perfectionist, and (lowercase "i") imagineer.</p>
