Fixed bug that I missed from last commit that made image hover transition not work properly. Added to and aligned the About Me page text. Changed links for email and resume on Connect page to be black by default, then blue when hovered over.

--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
 
 <div class="content">
   <h1>About Me</h1>
-  <p>
+  <p align="left">
     I was born and raised in Ogden, Utah. After high school and serving a
     full-time two-year mission for my church (The Church of Jesus Christ of
     Latter-day Saints) in the Tokyo, Japan area, I started studying electrical
@@ -27,19 +27,26 @@
     technology. This led me to pursue doing research at the MIT Media Lab, where
     many breakthroughs have been made in that field.
   </p>
-  <p>
+  <p align="left">
     I now live in Cambridge, Massachusetts as a full-time student/research
     assistant with my sweet wife, Kayla, and our two-year-old daughter, Lia.
     When I am not studying or doing research, I love to spend as much time with
     my family as possible. We love to watch movies, play games, and go on walks
-    together. I am an avid sports fan (#TakeNote), nerd culture enthusiast (Star
+    together. I am an avid sports fan (go Jazz!), nerd culture enthusiast (Star
     Wars and MCU expert), and video game lover (grew up with PlayStation, and am
     now also a Nintendo follower). I also love to be outdoors taking a hike,
     going camping or hunting, or just looking at the beautiful world that
     surrounds us.
   </p>
-  <p>
-    
+  <p align="left">
+    I want to discover new ways to use holography and other 3D display
+    technologies to create immersive and interactive experiences for people. I
+    want to push the boundaries of what those technologies currently offer to
+    make something amazing. I want others to see how cool these technologies
+    truly are and how they might be implemented. I want these technologies to be
+    accessible so more people can try them out and create new things with them.
+    Mostly, I just want to keep making the world a better place, in whatever way
+    I can.
   </p>
 </div>
 
