--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
   <h1>Hello there!</h1>
   <h2>My name is Justin B. Christensen.</h2>
   <div class="picture">
-    <img src="images/jbc_headshot_grayscale.jpg" alt="Portrait of Justin" width="300" height="300">
-    <img src="images/jbc_headshot_color.jpg" class="img-top" alt="Portrait of Justin" width="300" height="300">
+    <img src="images/jbc_headshot_grayscale.jpg" alt="Portrait of Justin"
+    width="300" height="300">
+    <img src="images/jbc_headshot_color.jpg" class="img-top" alt="Portrait of
+    Justin" width="300" height="300">
   </div>
   <p>I am a Masters student at the MIT Media Lab.</p>
   <p>I explore holography and other 3D display technologies.</p>
@@ -29,7 +31,8 @@
 </div>
 
 <div class="footer">
-  <p>&copy <script>document.write( new Date().getFullYear() );</script> Justin Browning Christensen. All Rights Reserved.</p>
+  <p>&copy <script>document.write( new Date().getFullYear() );</script> Justin
+    Browning Christensen. All Rights Reserved.</p>
 </div>
 
 </body>
