--- a/connect.html
+++ b/connect.html
@@ -7,7 +7,8 @@
 <link rel="shortcut icon" type="image/jpg" href="images/favicon_j.png"/>
 <link rel="stylesheet" type="text/css" href="stylesheet.css">
 <!-- Add icon library -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet"
+href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
 
@@ -20,17 +21,22 @@
 
 <div class="content">
   <h1>Connect</h1>
-  <p>If you would like to get in touch, please email me <a href="mailto:justinbc@mit.edu">here</a>.</p>
-  <p>If you are interested, <a href="assets/JBC_Resume.pdf">here</a> is a copy of my resume.</p>
+  <p>If you would like to get in touch, please email me <a id="dark_link"
+    href="mailto:justinbc@mit.edu">here</a>.</p>
+  <p>If you are interested, <a id="dark_link" href="assets/JBC_Resume.pdf">here</a>
+    is a copy of my resume.</p>
   <a href="mailto:justinbc@mit.edu" class="fa fa-envelope-square"></a>
-  <a href="https://www.linkedin.com/in/justin-b-christensen/" class="fa fa-linkedin"></a>
-  <a href="https://www.facebook.com/justin.b.christensen.9" class="fa fa-facebook"></a>
+  <a href="https://www.linkedin.com/in/justin-b-christensen/" class="fa
+  fa-linkedin"></a>
+  <a href="https://www.facebook.com/justin.b.christensen.9" class="fa
+  fa-facebook"></a>
   <a href="https://www.twitter.com/jbc_genki" class="fa fa-twitter"></a>
   <br></br>
 </div>
 
 <div class="footer">
-  <p>&copy <script>document.write( new Date().getFullYear() );</script> Justin Browning Christensen. All Rights Reserved.</p>
+  <p>&copy <script>document.write( new Date().getFullYear() );</script> Justin
+    Browning Christensen. All Rights Reserved.</p>
 </div>
 
 </body>
