--- a/projects.html
+++ b/projects.html
@@ -22,7 +22,8 @@
 </div>
 
 <div class="footer">
-  <p>&copy <script>document.write( new Date().getFullYear() );</script> Justin Browning Christensen. All Rights Reserved.</p>
+  <p>&copy <script>document.write( new Date().getFullYear() );</script> Justin
+    Browning Christensen. All Rights Reserved.</p>
 </div>
 
 </body>
