Condensed V1 website from four pages down to one page. Fixed the navigation bar. Changed Connect back to Contact. Tabs on nav bar now jump to sections on the page.

--- a/index.html
+++ b/index.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Home | Justin B. Christensen</title>
+<title>Justin B. Christensen</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="shortcut icon" type="image/jpg" href="images/favicon_j.png"/>
 <link rel="stylesheet" type="text/css" href="stylesheet.css">
+<link rel="stylesheet"
+href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
+
 <body>
 
+<a class="anchor" id="top"></a>
 <div class="topnav">
-  <a id="button_blue" href="connect.html">Connect</a>
-  <a id="button_green" href="projects.html">Projects</a>
-  <a id="button_yellow" href="about.html">About Me</a>
-  <a id="button_red" href="index.html">Home</a>
+  <a id="button_blue" href="#contact">Contact</a>
+  <a id="button_green" href="#projects">Projects</a>
+  <a id="button_yellow" href="#about">About Me</a>
+  <a id="button_red" href="#top">Home</a>
 </div>
 
 <div class="content">
@@ -28,6 +32,60 @@
   <p>I am a Masters student at the MIT Media Lab.</p>
   <p>I explore holography and other 3D display technologies.</p>
   <p>I am a fabricator, perfectionist, and (lowercase "i") imagineer.</p>
+
+  <a class="anchor" id="about"></a>
+  <hr>
+  <h2>About Me</h2>
+  <p align="left">
+    I was born and raised in Ogden, Utah. After high school and serving a
+    full-time two-year mission for my church (The Church of Jesus Christ of
+    Latter-day Saints) in the Tokyo, Japan area, I started studying electrical
+    engineering at Brigham Young University (BYU) in Provo, Utah. There, I
+    discovered my passion for holography and other forms of 3D display
+    technology. This led me to pursue doing research at the MIT Media Lab, where
+    many breakthroughs have been made in that field.
+  </p>
+  <p align="left">
+    I now live in Cambridge, Massachusetts as a full-time student/research
+    assistant with my sweet wife, Kayla, and our two-year-old daughter, Lia.
+    When I am not studying or doing research, I love to spend as much time with
+    my family as possible. We love to watch movies, play games, and go on walks
+    together. I am an avid sports fan (go Jazz!), nerd culture enthusiast (Star
+    Wars and MCU expert), and video game lover (grew up with PlayStation, and am
+    now also a Nintendo follower). I also love to be outdoors taking a hike,
+    going camping or hunting, or just looking at the beautiful world that
+    surrounds us.
+  </p>
+  <p align="left">
+    I want to discover new ways to use holography and other 3D display
+    technologies to create immersive and interactive experiences for people. I
+    want to push the boundaries of what those technologies currently offer to
+    make something amazing. I want others to see how cool these technologies
+    truly are and how they might be implemented. I want these technologies to be
+    accessible so more people can try them out and create new things with them.
+    Mostly, I just want to keep making the world a better place, in whatever way
+    I can.
+  </p>
+
+  <a class="anchor" id="projects"></a>
+  <hr>
+  <h2>Projects</h2>
+  <p>Coming soon...</p>
+
+  <a class="anchor" id="contact"></a>
+  <hr>
+  <h2>Contact</h2>
+  <p>If you would like to get in touch, please email me <a id="dark_link"
+    href="mailto:justinbc@mit.edu">here</a>.</p>
+  <p>If you are interested, <a id="dark_link" href="assets/JBC_Resume.pdf">here</a>
+    is a copy of my resume.</p>
+  <a href="mailto:justinbc@mit.edu" class="fa fa-envelope-square"></a>
+  <a href="https://www.linkedin.com/in/justin-b-christensen/" class="fa
+  fa-linkedin"></a>
+  <a href="https://www.facebook.com/justin.b.christensen.9" class="fa
+  fa-facebook"></a>
+  <a href="https://www.twitter.com/jbc_genki" class="fa fa-twitter"></a>
+  <br></br>
 </div>
 
 <div class="footer">
