--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome
   <h2>My name is Justin B. Christensen.</h2>
   <div class="picture">
     <img src="images/jbc_headshot_grayscale.jpg" alt="Portrait of Justin"
-    width="300" height="300">
+    width="300" height="300" border="3">
     <img src="images/jbc_headshot_color.jpg" class="img-top" alt="Portrait of
-    Justin" width="300" height="300">
+    Justin" width="300" height="300" border="3">
   </div>
   <p>I am a Masters student at the MIT Media Lab.</p>
   <p>I explore holography and other 3D display technologies.</p>
@@ -70,7 +70,88 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome
   <a class="anchor" id="projects"></a>
   <hr>
   <h2>Projects</h2>
-  <p>Coming soon...</p>
+  <!--  <h3>Holography</h3> -->
+  <figure>
+    <a id="dark_link" href="./projects/hologif.html">
+      <div class="picture">
+        <img src="images/hologif_grayscale.jpg" alt="HoloGIF" width="252"
+        height="189" border="3">
+        <img src="images/hologif_color.jpg" class="img-top" alt="HoloGIF"
+        width="252" height="189" border="3">
+      </div>
+    </a>
+    <figcaption>HoloGIF</figcaption>
+  </figure>
+  <figure>
+    <a id="dark_link" href="./projects/holograms.html">
+      <div class="picture">
+        <img src="images/holograms_grayscale.jpg" alt="Holograms" width="252"
+        height="189" border="3">
+        <img src="images/holograms_color.jpg" class="img-top" alt="Holograms"
+        width="252" height="189" border="3">
+      </div>
+    </a>
+    <figcaption>Holograms</figcaption>
+  </figure>
+  <figure>
+    <a id="dark_link" href="./projects/holovideo.html">
+      <div class="picture">
+        <img src="images/holovideo_grayscale.png" alt="Holographic Video Monitor"
+        width="252" height="189" border="3">
+        <img src="images/holovideo_color.png" class="img-top"
+        alt="Holographic Video Monitor" width="252" height="189" border="3">
+      </div>
+    </a>
+    <figcaption>Holographic Video Monitor</figcaption>
+  </figure>
+  <!--  <h3>Optics</h3> -->
+  <!--  <p>Magic Mirror</p> -->
+  <figure>
+    <a id="dark_link" href="./projects/fiber_optics.html">
+      <div class="picture">
+        <img src="images/fiber_optics_grayscale.jpg" alt="Fiber Optics"
+        width="252" height="189" border="3">
+        <img src="images/fiber_optics_color.jpg" class="img-top"
+        alt="Fiber Optics" width="252" height="189" border="3">
+      </div>
+    </a>
+    <figcaption>Fiber Optics</figcaption>
+  </figure>
+  <!--  <h3>Circuit Design</h3> -->
+  <figure>
+    <a id="dark_link" href="./projects/laser_tag.html">
+      <div class="picture">
+        <img src="images/laser_tag_grayscale.jpg" alt="Laser Tag"
+        width="252" height="189" border="3">
+        <img src="images/laser_tag_color.jpg" class="img-top"
+        alt="Laser Tag" width="252" height="189" border="3">
+      </div>
+    </a>
+    <figcaption>Laser Tag</figcaption>
+  </figure>
+  <figure>
+    <a id="dark_link" href="./projects/stereo_system.html">
+      <div class="picture">
+        <img src="images/stereo_system_grayscale.jpg" alt="Stereo System"
+        width="252" height="189" border="3">
+        <img src="images/stereo_system_color.jpg" class="img-top"
+        alt="Stereo System" width="252" height="189" border="3">
+      </div>
+    </a>
+    <figcaption>Stereo System</figcaption>
+  </figure>
+<!--  <h3>Other</h3> -->
+  <figure>
+    <a id="dark_link" href="./projects/cookie_cutters.html">
+      <div class="picture">
+        <img src="images/cookie_cutters_grayscale.jpg" alt="Cookie Cutters"
+        width="252" height="189" border="3">
+        <img src="images/cookie_cutters_color.jpg" class="img-top"
+        alt="Cookie Cutters" width="252" height="189" border="3">
+      </div>
+    </a>
+    <figcaption>Cookie Cutters</figcaption>
+  </figure>
 
   <a class="anchor" id="contact"></a>
   <hr>
